[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/swordandgun/ActionUIData/ShootDodge2ActionUIData.gd" type="Script" id=1]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/temporal_round.png" type="Texture" id=2]
[ext_resource path="res://ui/XYPlot/XYPlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/ActionSelector/ActionUIData/ActionUIDataCheckButton.gd" type="Script" id=5]

[node name="ActionUIData" type="VBoxContainer"]
margin_right = 60.0
margin_bottom = 66.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ActivateTemporal" type="CheckButton" parent="."]
visible = false
margin_right = 60.0
margin_bottom = 17.0
size_flags_horizontal = 0
custom_constants/hseparation = 1
text = "temp"
icon = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Direction" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 66.0
always_max = true
default_value = Vector2( 0, -1 )

[node name="Control" type="Control" parent="Direction"]

[node name="Control" type="Control" parent="Direction/Control"]
margin_left = 30.0
margin_top = 33.0
margin_right = 30.0
margin_bottom = 33.0

[node name="Label2" type="Label" parent="Direction/Control/Control"]
margin_left = -119.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = 24.0
text = "ricochet angle"
align = 2
